2005-04-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/GNUmakefile (lilypond/index.html): Bugfix:
	depend on all PNG images.

2005-04-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in: Bugfix: also link .map files.

2005-04-09  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/music-functions.scm (music->make-music): generate 
	a (make-music ...) sexpr from a music expression.
	(display-scheme-music): use guile pretty printer to display the
	make-music sexpr.

2005-04-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/engraver-init.ly: reindent.
	Add CueVoice.

	* scm/music-functions.scm (music-pretty-string): handle moments
	too.
	(music-pretty-string): only print non-empty lists.
	(cue-substitute): create CueVoice context, which has smaller type.

	* lily/moment-scheme.cc (LY_DEFINE): new methods
	ly:moment-grace-{numerator,denominator}

	* lily/context-handle.cc: remove quit() method. 

	* lily/font-config.cc (init_fontconfig): be verbose about font path.
	(init_fontconfig): success is 0, not !0

2005-04-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/feta-nummer-code.mf (code): add plus glyph.

	* lily/tie.cc (print): idem.

	* lily/slur.cc (print): don't use thickness property for
	slur shape-thickness.

	* lily/stencil-scheme.cc (LY_DEFINE): don't reverse the order
	while adding stencils.

	* scm/define-markup-commands.scm (with-color): with-color markup
	command.
	(whiteout): new markup command 
	(filled-box): new markup command

2005-04-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/NEWS.tely (Top): Make tex-able.  Handy
	test for PDF docs.

	* mf/GNUmakefile (lilypond.map): Add PFAEmmentaler,
	PFAAybabtu-Regular.  Fixes feta font in PDFs.
	
	Notes for tetex-3.0 make web:
	   psclean.map: s/uhv8a/uhvr8a/
	   config.ps add:
		p +psfonts_t1.map
		p +psclean.map
		p +typeface.map

2005-04-06  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/music-functions.scm (music-pretty-string): fix bug with
	string argument.
